--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
   <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
 
-  <!-- Load Esri Leaflet from CDN -->
+  <!-- Load Leaflet plugins from CDN -->
   <script src="http://cdn-geoweb.s3.amazonaws.com/esri-leaflet/0.0.1-beta.5/esri-leaflet.js"></script>
+  <script src="http://rawgit.com/calvinmetcalf/leaflet-ajax/master/dist/leaflet.ajax.min.js"></script>
 
   <style>
     body {margin:0;padding:0;}
@@ -48,6 +49,8 @@
 <script>
   var map = L.map('map').setView([36.5786, -118.2920], 14);
   var layer = L.esri.basemapLayer('Topographic').addTo(map);
+  var peaksGeoJSONUrl = './data/peaks.geojson';
+  var geojsonLayer = new L.GeoJSON.AJAX(peaksGeoJSONUrl).addTo(map);
   var layerLabels;
 
   function setBasemap(basemap) {
