--- a/index.html
+++ b/index.html
@@ -68,14 +68,18 @@
             iconAnchor: [22, 22]
         });
 
-        L.marker([36.5486, -118.2920], {icon: mountainsIcon}).addTo(map);
+        L.marker([36.5486, -118.2920], {
+            icon: mountainsIcon
+        }).addTo(map);
 
         // add peaks
         var peaksGeoJSONUrl = './data/peaks.geojson';
         new L.GeoJSON.AJAX(peaksGeoJSONUrl, {
-        	pointToLayer: function (feature, latlng) {
-				return L.marker(latlng, {icon: mountainsIcon});
-			},
+            pointToLayer: function(feature, latlng) {
+                return L.marker(latlng, {
+                    icon: mountainsIcon
+                });
+            },
             onEachFeature: peaksPopup
         }).addTo(map);
 
