--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     }
     #basemaps-wrapper {
         position: absolute;
-        top: 10px;
-        right: 10px;
+        bottom: 10px;
+        left: 10px;
         z-index: 10;
         background: white;
         padding: 10px;
@@ -39,6 +39,7 @@
 </head>
 
 <body>
+    <a class="hidden-xs" href="https://github.com/tomwayson/sierra-peaks-map"><img style="position: absolute; top: 0; right: 0; border: 0; width:125px; z-index: 10;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="Fork me on GitHub"></a>
     <div id="map"></div>
     <div id="basemaps-wrapper" class="leaflet-bar">
         Basemap:
